--- a/index.html
+++ b/index.html
@@ -8,6 +8,129 @@
     <style>
         *{margin:0;padding:0;box-sizing:border-box}
         body{font-family:'Open Sans',sans-serif;background:#e8e8e8;color:#333;line-height:1.8}
+        .lang-switcher{position:fixed;top:10px;right:20px;z-index:1000;display:flex;gap:8px}
+        .lang-btn{background:#2d5a3d;color:#fff;border:none;padding:6px 12px;cursor:pointer;font-size:12px;font-weight:bold;border-radius:3px}
+        .lang-btn:hover,.lang-btn.active{background:#70AD47}
+        .navbar{background:#f5f5f5;padding:1rem 2rem;display:flex;justify-content:center;gap:2rem;flex-wrap:wrap;border-bottom:1px solid #ddd;position:relative;z-index:100}
+        .navbar a{color:#2d5a3d;text-decoration:none;font-size:1rem;font-weight:600}
+        .navbar a:hover{color:#70AD47}
+        .hero{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;padding:4rem 2rem;position:relative;overflow:hidden}
+        .hero-video-bg{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);min-width:100%;min-height:100%;width:auto;height:auto;z-index:0;object-fit:cover}
+        .hero-content{position:relative;z-index:1}
+        .header-svg{width:700px;max-width:95%;margin-bottom:0.5rem}
+        section{padding:4rem 2rem;max-width:900px;margin:0 auto}
+        h3{font-size:1.6rem;color:#2d5a3d;margin-bottom:1.5rem;font-weight:600}
+        p{margin-bottom:1.5rem;font-size:1.05rem;text-align:justify;color:#333}
+        .hashtag{color:#2d5a3d;font-weight:bold}
+        .cycle-section{text-align:center;padding:4rem 2rem;background:#f5f5f5;max-width:100%}
+        .cycle-section h3,.cycle-section p{max-width:900px;margin:0 auto 1.5rem}
+        .cycle-section p{text-align:center}
+        .cycle-image{max-width:100%;width:500px;margin:2rem auto}
+        .developer-section{background:#2d5a3d;color:#fff;padding:4rem 2rem;text-align:center;max-width:100%}
+        .developer-section h3{color:#70AD47}
+        .developer-section p{color:#fff;text-align:center;max-width:700px;margin:0 auto 1.5rem}
+        .developer-section a{color:#70AD47}
+        .mental-health{background:#f0f0f0;padding:4rem 2rem;text-align:center;max-width:100%}
+        .mental-health h3{color:#2d5a3d;font-size:1.8rem}
+        .mental-health .subtitle{color:#666;font-size:1.2rem;margin-bottom:2rem}
+        .resources{display:flex;justify-content:center;gap:2rem;flex-wrap:wrap;margin-top:2rem}
+        .resource-card{background:#fff;padding:2rem;border-radius:8px;box-shadow:0 2px 10px rgba(0,0,0,0.1);min-width:250px}
+        .resource-card h4{color:#2d5a3d;margin-bottom:1rem}
+        .resource-card a{color:#70AD47}
+        .gofundme{background:#d4a000;color:#fff;text-align:center;padding:4rem 2rem;max-width:100%}
+        .gofundme h3{color:#fff;font-size:1.8rem}
+        .gofundme p{color:#fff;text-align:center}
+        .gofundme-btn{display:inline-block;background:#2d5a3d;color:#fff;padding:1rem 3rem;text-decoration:none;font-weight:bold;border-radius:4px;margin-top:1rem}
+        .quote-section{text-align:center;padding:4rem 2rem;background:#e8e8e8}
+        .quote-section blockquote{font-size:1.5rem;font-style:italic;color:#2d5a3d}
+        .footer{background:#333;color:#fff;padding:3rem 2rem;text-align:center}
+        .footer a{color:#70AD47;margin:0 1rem}
+        .footer .copyright{margin-top:2rem;color:#888}
+    </style>
+</head>
+<body>
+    <div class="lang-switcher">
+        <button class="lang-btn active" onclick="setLang('de')">DE</button>
+        <button class="lang-btn" onclick="setLang('en')">EN</button>
+        <button class="lang-btn" onclick="setLang('fr')">FR</button>
+        <button class="lang-btn" onclick="setLang('es')">ES</button>
+    </div>
+    <nav class="navbar">
+        <a href="#home" data-de="Projekt Omniinspiration" data-en="Project Omniinspiration" data-fr="Projet Omniinspiration" data-es="Proyecto Omniinspiration">Projekt Omniinspiration</a>
+        <a href="#atemtracking" data-de="Atemtracking" data-en="Breath Tracking" data-fr="Suivi Respiratoire" data-es="Seguimiento Respiratorio">Atemtracking</a>
+        <a href="#entstehung" data-de="Über die Entstehung" data-en="About the Origin" data-fr="À propos de l'origine" data-es="Sobre el Origen">Über die Entstehung</a>
+        <a href="#support" data-de="Unterstützen" data-en="Support" data-fr="Soutenir" data-es="Apoyar">Unterstützen</a>
+    </nav>
+    <section class="hero" id="home">
+        <video class="hero-video-bg" autoplay loop muted playsinline><source src="Goldilungsvid2.mp4" type="video/mp4"></video>
+        <div class="hero-content">
+            <svg class="header-svg" viewBox="0 0 800 200" xmlns="http://www.w3.org/2000/svg">
+                <text x="400" y="70" text-anchor="middle" fill="#70AD47" font-family="Georgia,serif" font-size="52" font-weight="bold" letter-spacing="8">PROJECT</text>
+                <text x="400" y="150" text-anchor="middle" fill="#70AD47" font-family="Georgia,serif" font-size="42" font-weight="bold" letter-spacing="6">OMNIINSPIRATION</text>
+            </svg>
+        </div>
+    </section>
+    <section id="entstehung">
+        <h3 data-de="Depressionen sind heilbar." data-en="Depression is curable." data-fr="La dépression est guérissable." data-es="La depresión es curable.">Depressionen sind heilbar.</h3>
+        <p data-de="Leider bewegt sich bislang die Effektivität von Antidepressiva mehreren Studien zufolge etwa im gleichen Wirkungsbereich wie dem von Placebos." data-en="Unfortunately, the effectiveness of antidepressants is roughly in the same range as placebos according to multiple studies." data-fr="Malheureusement, l'efficacité des antidépresseurs se situe à peu près dans la même gamme que celle des placebos selon plusieurs études." data-es="Desafortunadamente, la efectividad de los antidepresivos está aproximadamente en el mismo rango que los placebos según múltiples estudios.">Leider bewegt sich bislang die Effektivität von Antidepressiva mehreren Studien zufolge etwa im gleichen Wirkungsbereich wie dem von Placebos.</p>
+        <p data-de="Wesentlich stärkere positive Effekte haben Ergotherapeutisch-/Sportliche-Programme sowie Achtsamkeit-/Meditationstrainings vorzuweisen." data-en="Significantly stronger positive effects are shown by occupational/sports therapy programs as well as mindfulness/meditation training." data-fr="Des effets positifs nettement plus forts sont démontrés par les programmes d'ergothérapie/sport ainsi que la formation à la pleine conscience/méditation." data-es="Los programas de terapia ocupacional/deportiva y el entrenamiento de mindfulness/meditación muestran efectos positivos significativamente más fuertes.">Wesentlich stärkere positive Effekte haben Ergotherapeutisch-/Sportliche-Programme sowie Achtsamkeit-/Meditationstrainings vorzuweisen.</p>
+        <p><span data-de="Was folgt, ist der Versuch über eine Möglichkeit der Depressionsbekämpfung zu informieren, die nicht nur effektiv, sondern gleichzeitig" data-en="What follows is an attempt to inform about a way to fight depression that is not only effective, but also" data-fr="Ce qui suit est une tentative d'informer sur une façon de combattre la dépression qui est non seulement efficace, mais aussi" data-es="Lo que sigue es un intento de informar sobre una forma de combatir la depresión que no solo es efectiva, sino también">Was folgt, ist der Versuch über eine Möglichkeit der Depressionsbekämpfung zu informieren, die nicht nur effektiv, sondern gleichzeitig</span> <span class="hashtag">#cheaperthanabullet</span> <span data-de="ist." data-en="." data-fr="." data-es=".">ist.</span></p>
+    </section>
+    <section class="cycle-section">
+        <h3 data-de="Der negative Kreislauf" data-en="The Negative Cycle" data-fr="Le Cycle Négatif" data-es="El Ciclo Negativo">Der negative Kreislauf</h3>
+        <p data-de="Depressionen stehen im Zusammenhang mit einem Teufelskreis:" data-en="Depression is connected to a vicious cycle:" data-fr="La dépression est liée à un cercle vicieux:" data-es="La depresión está conectada con un círculo vicioso:">Depressionen stehen im Zusammenhang mit einem Teufelskreis:</p>
+        <img src="NegativSpirale1.png" alt="Cycle" class="cycle-image">
+    </section>
+    <section id="atemtracking">
+        <h3 data-de="Atemtracking Via Audio" data-en="Breath Tracking Via Audio" data-fr="Suivi Respiratoire Via Audio" data-es="Seguimiento Respiratorio Via Audio">Atemtracking Via Audio</h3>
+        <p data-de="Unsere Technologie nutzt das Mikrofon Ihres Smartphones, um Ihre Atemmuster zu analysieren - ohne spezielle Hardware, ohne teure Sensoren." data-en="Our technology uses your smartphone's microphone to analyze your breathing patterns - no special hardware, no expensive sensors." data-fr="Notre technologie utilise le microphone de votre smartphone pour analyser vos schémas respiratoires - pas de matériel spécial, pas de capteurs coûteux." data-es="Nuestra tecnología utiliza el micrófono de su smartphone para analizar sus patrones de respiración - sin hardware especial, sin sensores costosos.">Unsere Technologie nutzt das Mikrofon Ihres Smartphones, um Ihre Atemmuster zu analysieren - ohne spezielle Hardware, ohne teure Sensoren.</p>
+        <p data-de="Die App erkennt, wann Sie flach atmen, und gibt Ihnen sanfte Hinweise, um zu tieferer, gesünderer Atmung zurückzukehren." data-en="The app detects when you breathe shallowly and gives you gentle prompts to return to deeper, healthier breathing." data-fr="L'application détecte quand vous respirez superficiellement et vous donne des indications douces pour revenir à une respiration plus profonde et plus saine." data-es="La aplicación detecta cuándo respira superficialmente y le da indicaciones suaves para volver a una respiración más profunda y saludable.">Die App erkennt, wann Sie flach atmen, und gibt Ihnen sanfte Hinweise, um zu tieferer, gesünderer Atmung zurückzukehren.</p>
+    </section>
+    <section class="developer-section">
+        <h3 data-de="Softwareentwickler gesucht" data-en="Software Developers Wanted" data-fr="Développeurs Recherchés" data-es="Se Buscan Desarrolladores">Softwareentwickler gesucht</h3>
+        <p data-de="Wir suchen leidenschaftliche Entwickler, die an diesem Projekt mitwirken möchten." data-en="We are looking for passionate developers who want to contribute to this project." data-fr="Nous recherchons des développeurs passionnés qui souhaitent contribuer à ce projet." data-es="Buscamos desarrolladores apasionados que quieran contribuir a este proyecto.">Wir suchen leidenschaftliche Entwickler, die an diesem Projekt mitwirken möchten.</p>
+        <p><a href="mailto:cheaperthanabullet@tutanota.com">cheaperthanabullet@tutanota.com</a></p>
+    </section>
+    <section class="mental-health">
+        <h3 data-de="Sei mutig und nimm Hilfe an" data-en="Be Brave and Accept Help" data-fr="Soyez Courageux et Acceptez de l'Aide" data-es="Sé Valiente y Acepta Ayuda">Sei mutig und nimm Hilfe an</h3>
+        <p class="subtitle" data-de="Du bist nicht allein" data-en="You are not alone" data-fr="Vous n'êtes pas seul" data-es="No estás solo">Du bist nicht allein</p>
+        <div class="resources">
+            <div class="resource-card"><h4>Telefonseelsorge</h4><p>0800 111 0 111</p><p>0800 111 0 222</p></div>
+            <div class="resource-card"><h4>Online</h4><a href="https://online.telefonseelsorge.de">telefonseelsorge.de</a></div>
+        </div>
+    </section>
+    <section class="gofundme" id="support">
+        <h3 data-de="Unterstütze das Projekt" data-en="Support the Project" data-fr="Soutenez le Projet" data-es="Apoya el Proyecto">Unterstütze das Projekt</h3>
+        <p data-de="Hilf uns, diese lebensrettende Technologie zu entwickeln." data-en="Help us develop this life-saving technology." data-fr="Aidez-nous à développer cette technologie qui sauve des vies." data-es="Ayúdanos a desarrollar esta tecnología que salva vidas.">Hilf uns, diese lebensrettende Technologie zu entwickeln.</p>
+        <a href="https://gofund.me/a6e22175" class="gofundme-btn" target="_blank">GoFundMe</a>
+    </section>
+    <section class="quote-section">
+        <blockquote>"Giving mankind a fish vs teaching it to breathe"</blockquote>
+    </section>
+    <footer class="footer">
+        <p><a href="mailto:cheaperthanabullet@tutanota.com">cheaperthanabullet@tutanota.com</a> <a href="tel:+492204-5067746">+49 2204-5067746</a></p>
+        <p class="copyright">© 2024 Projekt Omniinspiration</p>
+    </footer>
+    <script>
+        function setLang(lang) {
+            document.querySelectorAll('.lang-btn').forEach(b => b.classList.remove('active'));
+            document.querySelector('.lang-btn[onclick*="'+lang+'"]').classList.add('active');
+            document.querySelectorAll('[data-'+lang+']').forEach(el => {
+                el.textContent = el.getAttribute('data-'+lang);
+            });
+        }
+    </script>
+</body>
+</html><!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projekt Omniinspiration - Cheaper Than A Bullet</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        *{margin:0;padding:0;box-sizing:border-box}
+        body{font-family:'Open Sans',sans-serif;background:#e8e8e8;color:#333;line-height:1.8}
         .navbar{background:#f5f5f5;padding:1rem 2rem;display:flex;justify-content:center;gap:2rem;flex-wrap:wrap;border-bottom:1px solid #ddd;position:relative;z-index:100}
         .navbar a{color:#2d5a3d;text-decoration:none;font-size:1rem;font-weight:600}
         .navbar a:hover{color:#70AD47}
